# immo_ai_project

./: .gitattributes  .gitignore  README.md  pyproject.toml
geodata/: readme.md
geodata/amensity/: README.md  cell_multimetric.py  cities_de.tsv  extracts.txt  micro_density.py  overpass_build.sh  overpass_http.py  overpass_setup.sh  overpass_start.sh  overpass_status.sh  overpass_stop.sh  street_density.py
get_data/past/immobilie1/data/processed/: immobilie1_exposes_structured.jsonl
get_data/past/immobilie1/data/raw/: immobilie1_expose_links.json
get_data/past/immobilie1/scripts/: analyze_expose_bodies.py  collect_expose_links.py  fetch_expose_bodies.py
get_data/past/immoscout24/: README.md
get_data/past/immoscout24/data/processed/: immoscout_exposes_structured.json
get_data/past/immoscout24/data/raw/: expose_bodies.json  (+6 more)
get_data/past/immoscout24/scripts/: analyze_expose_bodies.py  collect_expose_links.py  compress_raw_jsonl.sh  fetch_expose_bodies.py  score_exposes_living_standard.py
get_data/past/immowelt/scripts/: collect_expose_links.py
get_data/past/regionalimmobilie24/scripts/: fetch_expose_link.py  get_bodies.py
persona_model/: README.md  classify_personas.py  label_personas.py  train_persona_model.py
src/immo_ai/: __init__.py  cli.py
src/immo_ai/ingestion/: immobilie1.py
src/immo_ai/io/: jsonl.py  paths.py
src/immo_ai/parsing/: immobilie1.py
src/immo_ai/schemas/: expose.py
src/immo_ai/utils/: http.py  logging.py  text.py
tests/: test_http_controls.py  test_parsing_immobilie1.py
tests/fixtures/: immobilie1_expose.html
(+16 files in other folders)
